--- a/css/admin/adminSidebar.css
+++ b/css/admin/adminSidebar.css
@@ -1,11 +1,73 @@
-#sidebar{
-	position: absolute;
-	width: 25%;
-	height: 100vh;
-	background-color: #30A493;
+body {
+    overflow: hidden;
 }
 
-.accordion {
+#sidebar{
+	position: absolute;
+	width: 350px;
+	height: 100vh;
+    background-color: #313539;
+    z-index: 2;
+}
+
+#sidebar .header h3 {
+    padding-top: 50px;
+}
+
+#sidebar .header {
+    background-color: #00A077;
+    width: 100%;
+    height: 180px;
+    color: white;
+    text-align: center;
+}
+
+#sidebar .pages {
+    cursor: pointer;
+    padding: 0 30px;
+}
+
+#sidebar .pages i {
+    right: 30px;
+    position: absolute;
+    transition:  .5s;
+}
+
+#sidebar .pages .page {
+    border-bottom: 1px solid #B5BBBF;
+    padding: 15px 0;
+
+}
+
+#sidebar .saveChanges {
+    background-color: #00A077;
+    width: 100%;
+    height: 70px;
+    color: #EEEEEE;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    padding-top: 20px;
+}
+
+.panel {
+    position: absolute;
+    width: 700px;
+    background-color: grey;
+    z-index: 1;
+    left: -350px;
+    transition: .5s;
+}
+
+.active_panel {
+    left: 350px;
+}
+
+.active {
+    color: #EEEEEE;
+}
+
+/* .accordion {
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -28,4 +90,4 @@
     background-color: white;
     overflow: hidden;
 
-}
+} */
