--- a/css/framework.css
+++ b/css/framework.css
@@ -2,3 +2,38 @@ body {
     margin: 0;
     padding: 0;
 }
+
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
+}
+
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 0;
+}
+
+h3 {
+    font-family: 'Playfair Display', serif;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+}
+
+h4 {
+    font-family: 'Playfair Display', serif;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+}
+
+p, a {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    margin: 0;
+    color: #B5BBBF
+}
