--- a/css/admin/adminSidebar.css
+++ b/css/admin/adminSidebar.css
@@ -48,8 +48,19 @@ body {
     text-align: center;
     position: absolute;
     bottom: 0;
-    padding-top: 10px;
+    padding-top: 20px;
     cursor: pointer;
+    transition: .3s ease;
+}
+
+#sidebar .saveChanges:hover {
+    background-color: rgb(235, 235, 235);
+    color: #00A077;
+}
+
+#sidebar .saveChanges h3 {
+    font-family: 'Montserrat', sans-serif !important;
+    font-size: 22px;
 }
 
 .panel {
