--- a/css/admin/login.css
+++ b/css/admin/login.css
@@ -1,21 +1,30 @@
 body{
 	background-color: #EEEEEE;
+	overflow: hidden;
 }
 
-#loginForm{
+#loginForm, #forgotPasswordForm{
+	position: absolute;
+	left: calc(50vw - 325px);
 	width: 650px;
 	height: 450px;
 	margin: 0 auto; 
 	margin-top: calc(50vh - 225px);
 	background-color: #ffffff;
+	transition: .5s;
 }
 
-#login_form{
+#forgotPasswordForm{
+	left: 100%;
+}
+
+
+.login_form{
 	width: 80%;
 	margin-left: 10%;
 }
 
-#login_form h1{
+.login_form h1{
 	text-align: center;
 	padding-top: 1em;
 	padding-bottom: 1em;
@@ -32,21 +41,28 @@ body{
 	padding-left: 5%;
 }
 
-#loginSubmit{
+.loginSubmit, #iGotIt{
 	width: 100%;
 	height: 60px;
-	background-color: #00A077;
+	background-color: #79A7A4;
 	margin-bottom: 1em;
 	text-align: center;
 }
 
-#loginSubmit p {
+.loginSubmit p {
 	padding-top: 15px;
+	margin: 0 auto;
 	color: #ffffff;
 }
 
-#forgotpassword{
+#forgotPassword{
 	float: right;
 	margin-right: 10%;
-	color: #00A077;
+	color: #79A7A4;
 }
+#forgotPassword:hover{
+	cursor: pointer;
+	color: #9CD1BE;
+}
+
+
