--- a/css/admin/forgotPassword.css
+++ b/css/admin/forgotPassword.css
@@ -18,13 +18,19 @@ body{
 	left: 100%;
 }
 
+
 .login_form, .forgotPassword_form{
 	width: 80%;
 	margin-left: 10%;
 }
 
-.login_form h1, .forgotPassword_form h1{
+.login_form h1{
 	text-align: center;
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+.forgotPassword_form h1{
 	padding-top: 1em;
 	padding-bottom: 1em;
 }
@@ -57,7 +63,7 @@ body{
 	padding-top: 17px;
 }
 
-#forgotPasswordText, #loginText{
+#forgotPasswordText{
 	color: black;
 }
 
