--- a/css/admin/login.css
+++ b/css/admin/login.css
@@ -3,7 +3,7 @@ body{
 	overflow: hidden;
 }
 
-#loginForm, #forgotPasswordForm{
+#loginForm, #forgotPasswordForm, #emailSends{
 	position: absolute;
 	left: calc(50vw - 325px);
 	width: 650px;
@@ -18,12 +18,16 @@ body{
 	left: 100%;
 }
 
-.login_form, .forgotPassword_form{
+#emailSends{
+	left: 100%;
+}
+
+.login_form, .forgotPassword_form, .email_sends{
 	width: 80%;
 	margin-left: 10%;
 }
 
-.login_form h1, .forgotPassword_form h1{
+.login_form h1, .forgotPassword_form h1, .email_sends h1{
 	text-align: center;
 	padding-top: 1em;
 	padding-bottom: 1em;
@@ -40,7 +44,7 @@ body{
 	padding-left: 5%;
 }
 
-.loginSubmit, #iGotIt{
+.loginSubmit, #iGotIt, #confirmButton{
 	width: 100%;
 	height: 60px;
 	background-color: #79A7A4;
@@ -48,11 +52,11 @@ body{
 	text-align: center;
 }
 
-.loginSubmit:hover, #iGotIt:hover{
+.loginSubmit:hover, #iGotIt:hover, #confirmButton:hover{
 	background-color: #9CD1BE;
 }
 
-.loginSubmit p, #iGotIt p{
+.loginSubmit p, #iGotIt p, #confirmButton p{
 	color: #ffffff;
 	padding-top: 17px;
 }
@@ -69,6 +73,10 @@ body{
 #forgotPassword:hover{
 	cursor: pointer;
 	color: #9CD1BE;
+}
+
+#confirmButton{
+	margin-top: 50px;
 }
 
 
