--- a/css/admin/adminSidebar.css
+++ b/css/admin/adminSidebar.css
@@ -113,6 +113,7 @@ body {
     font-family: 'Montserrat', sans-serif !important;
     font-size: 18px;
     padding: 20px;
+    resize: none;
 }
 
 #logout {
