--- a/css/site/home.css
+++ b/css/site/home.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: "Josefin Sans", sans-serif;
+   height: 3000px; /* <--scroll testen */
+  background: #eee;
 }
 
 .bootstrap-test {
