--- a/css/site/header.css
+++ b/css/site/header.css
@@ -19,12 +19,12 @@
 	overflow: hidden;
 }
 
-@keyframes navbar-show-anim{
+/* @keyframes navbar-show-anim{
 	100%{
 		transform: translateY(0%);
 		opacity: 1;
 	}
-}
+} */
 
 @keyframes navbar-brand{
 	100%{
@@ -38,8 +38,8 @@
 	padding-bottom: 60px;
 	margin-bottom: 0px;
 	transition: all 0.8s cubic-bezier(1,-0.08,0,1.15);
-	animation: navbar-show-anim 1s ease forwards;
-	transform: translateY(-100%);
+	/* animation: navbar-show-anim 1s ease forwards; */
+	/* transform: translateY(-100%); */
 }
 
 #navbar-brand-logo{
@@ -68,13 +68,17 @@
 
 #desktop-menu li a{
 	text-decoration: none;
-	color: black !important;
+	color: white !important;
 	font-size: 16px;
 	font-family: 'Montserrat', sans-serif;
 	position: relative;
 	text-transform: uppercase;
 	transition: all 0.3s cubic-bezier(1,-0.05,.02,1.11);
 
+}
+
+.navbar-scrolled #desktop-menu li a{
+	color: black !important;
 }
 
 #desktop-menu li a::after{
