--- a/css/site/home.css
+++ b/css/site/home.css
@@ -10,20 +10,17 @@ body {
   background: #eee;
 }
 
+/* Hero Section */
 .home-hero {
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   background: url(../../images/home-background.png);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
-}
-
-.home-hero .intro {
-  /* background: red; */
-
+  padding: 100px 0;
 }
 
 .home-hero .intro h1 {
@@ -49,18 +46,61 @@ body {
   max-width: 880px;
   color: white;
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
 }
 
+.home-hero button {
+  margin-top: 40px;
+  margin-right: 40px;
+  background: white;
+  color: #67ABA4;
+  border: none;
+  padding: 16px 50px;
+  border-radius: 100px;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  outline: none !important;
+}
+
+/* Home Blocks */
 .home-blocks {
-  padding-top: 50px; 
-  padding-bottom: 50px; 
-  margin-top: -120px;
+  margin-top: -100px;
 }
 
 .home-blocks .case {
   background: white; 
-  padding-top: 20px; 
-  padding-bottom: 20px;
+  padding: 50px 20px;
+  text-align: center;
+  min-height: 300px;
+  border-bottom: 2px solid #9CD1BE;
+}
+
+.home-blocks .case img {
+  display: block;
+  margin: auto;
+  height: 70px;
+}
+
+.home-blocks .case p {
+  margin-top: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+/* Behandelingen Section */
+.home-behandelingen {
+  /* padding: 100px 0; */
+}
+
+.home-behandelingen h2 {
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  font-size: 46px;
+  font-weight: bold;
+  color: #67ABA4;
+  margin: 100px 0;
 }
