--- a/css/admin.css
+++ b/css/admin.css
@@ -4,12 +4,9 @@
     left: 350px;
     position: absolute;
     top: 0;
-    left: 350px;
-}
-
-.fake_body {
     left: 100%;
     transition: .5s;
+    overflow-y: auto;
 }
 
 .fake_body.active_panel {
