--- a/css/framework.css
+++ b/css/framework.css
@@ -35,5 +35,5 @@ p, a {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     margin: 0;
-    color: #B5BBBF
+    color: #9e9e9e
 }
