--- a/css/site/header.css
+++ b/css/site/header.css
@@ -37,7 +37,7 @@
 	padding-top: 60px;
 	padding-bottom: 60px;
 	margin-bottom: 0px;
-	transition: all 0.8s cubic-bezier(1,-0.08,0,1.15);
+	transition: all 0.3s cubic-bezier(.5,.01,.56,1.01);
 	/* animation: navbar-show-anim 1s ease forwards; */
 	/* transform: translateY(-100%); */
 }
