--- a/css/site/home.css
+++ b/css/site/home.css
@@ -93,6 +93,7 @@ body {
 
 /* Behandelingen Section */
 .home-behandelingen {
+  padding-bottom: 100px;
 }
 
 .home-behandelingen h2 {
@@ -155,4 +156,15 @@ body {
   background-position: center center;
   min-height: 350px;
   height: 100%;
+}
+
+/* Home Tip Section */
+.home-tip {
+  height: auto;
+  background: white;
+  
+}
+
+.home-tip .inner-tip {
+  border: 2px solid red;
 }
