--- a/css/site/header.css
+++ b/css/site/header.css
@@ -7,6 +7,9 @@
 	transition: all 0.5s cubic-bezier(1,.01,0,1);
 }
 
+
+
+
 .preload-complete{
 	width: 0% !important;
 }
@@ -163,14 +166,15 @@
 }
 
 #mobile-overlay{
+	visibility: none !important;
+	z-index: 100;
 	width: 100%;
 	height: 100%;
 	background: white;
 	position: fixed;
-	visibility: none;
 	opacity: 0;
 	transition: all 0.5s ease;
-	visibility: none;
+	visibility: hidden;
 	text-align: center;
 }
 
