--- a/css/site/behandelingen.scss
+++ b/css/site/behandelingen.scss
@@ -49,7 +49,7 @@ section{
 	}
 }
 
-#behandelingen{
+#behandelingen--section{
 	outline: 2px $color solid;
 	outline-offset: -20px ;
 	padding-top: 200px !important;
