--- a/css/framework.css
+++ b/css/framework.css
@@ -4,36 +4,36 @@ body {
 }
 
 h1 {
-    font-family: 'Playfair Display', serif !important;
-    font-size: 48px !important;
-    font-weight: bold !important;
-    margin: 0 !important;
+    font-family: 'Playfair Display', serif;
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
 }
 
 h2 {
-    font-family: 'Playfair Display', serif !important;
-    font-size: 40px !important;
-    font-weight: bold !important;
-    margin: 0 !important;
+    font-family: 'Playfair Display', serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 0;
 }
 
 h3 {
-    font-family: 'Playfair Display', serif !important;
-    font-size: 32px !important;
-    font-weight: bold !important;
-    margin: 0 !important;
+    font-family: 'Playfair Display', serif;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
 }
 
 h4 {
-    font-family: 'Playfair Display', serif !important;
-    font-size: 24px !important;
-    font-weight: bold !important;
-    margin: 0 !important;
+    font-family: 'Playfair Display', serif;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
 }
 
 p, a {
-    font-family: 'Montserrat', sans-serif !important;
-    font-size: 18px !important;
-    margin: 0 !important;
-    color: #9e9e9e !important;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    margin: 0;
+    color: #9e9e9e;
 }
