--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -134,3 +134,21 @@ body {
   font-size: 30px;
   color: rgba(0, 0, 0, 0.3);
 }
+
+.affiliatedWith h2{
+  text-align: center;
+  color: #67ABA4;
+  font-size: 50px;
+  margin-top: 50px; 
+}
+
+.affiliatedWith img{
+  margin: 0 auto;
+  width: 35%;
+  margin-left: 32.5%;
+  margin-top: 50px;
+}
+
+.affiliatedWith a{
+  text-align: center;
+}
