--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -147,8 +147,14 @@ body {
   width: 35%;
   margin-left: 32.5%;
   margin-top: 50px;
+  margin-bottom: 100px;
 }
 
 .affiliatedWith a{
+  font-size: 15px;
   text-align: center;
+  width: 10px;
+  margin-left: 40%;
+  margin-top: 50px;
+  color: #000000;
 }
