--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -15,7 +15,7 @@ body {
 .over-mij-hero {
     width: 100%;
     min-height: 90vh;
-    background: url(../../images/home-background.png);
+    background-image: url(../../images/home-background.png);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
