over-mij contact background color

--- a/css/site/contact-form.css
+++ b/css/site/contact-form.css
@@ -2,7 +2,7 @@
 #contactform--section {
   position: relative;
   margin-top: 150px;
-  background: #eee;
+  background: #ffffff;
   padding-top: 75px;
   padding-bottom: 75px; }
   #contactform--section h2 {
