--- a/css/site/contact-form.scss
+++ b/css/site/contact-form.scss
@@ -3,7 +3,7 @@ $color : #67ABA4;
 #contactform--section{
 	position: relative;
 	margin-top: 150px;
-	background: #eee;
+	background: #ffffff;
 	padding-top: 75px;
 	padding-bottom: 75px;
 	h2{
