--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -106,7 +106,7 @@ body {
 }
 
 .reviewInformation {
-    margin-top: 100px;
+    margin-top: 120px;
 }
 
 .reviewText:before {
@@ -158,4 +158,14 @@ body {
 
 .avgPrivacy {
     text-align: center;
+}
+
+@media only screen and (max-width: 990px) {
+  .review {
+        height: 1200px;
+  }
+
+  .reviewInline {
+    height: 1160px;
+  }
 }
