--- a/css/site/home.css
+++ b/css/site/home.css
@@ -13,14 +13,14 @@ body {
 /* Hero Section */
 .home-hero {
   width: 100%;
-  min-height: 90vh;
+  /* min-height: 90vh; */
   background-image: url(../../images/home-background.png);
-  background-size: cover;
-  background-position: center center;
+  /* background-size: cover; */
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
-  padding: 100px 0;
+  padding: 200px 0;
 }
 
 .home-hero .intro h1 {
