--- a/css/site/home.css
+++ b/css/site/home.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
   padding: 0;
@@ -83,6 +84,12 @@ body {
   margin-top: 30px;
 }
 
+@media only screen and (max-width: 992px) {
+  .home-blocks .case {
+    margin-bottom: 50px;
+  }
+}
+
 /* Behandelingen Section */
 .home-behandelingen {
   padding-bottom: 100px;
@@ -107,6 +114,12 @@ body {
   display: flex;
   align-items: center;
   padding: 0 80px;
+}
+
+@media only screen and (max-width: 992px) {
+  .home-behandelingen .behandeling-text {
+    padding: 20px 20px;
+  }
 }
 
 .home-behandelingen .behandeling-text h3 {
