--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -198,3 +198,48 @@ body {
     margin-top: 20px;
   }
 }
+
+@media only screen and (max-width: 450px) {
+
+    .over-mij-hero .intro h1::before {
+        content: '“';
+        font-size: 250px;
+        position: absolute;
+        left: -20px;
+        opacity: 0.2;
+        margin-top: -80px;
+        margin-left: 5%;
+    }
+
+    .over-mij-hero .intro h1{
+        font-size: 40px;    
+    }
+
+    .over-mij-hero .intro p{
+        font-size: 25px;
+    }
+    
+    .loopbaanswitch{
+        margin-left: -30px;
+    }
+
+    .review{
+        height: 1140px;
+    }
+
+    .reviewText {
+        margin-top: -190px;
+    }
+
+    .reviewInline{
+        height: 1100px;
+    }
+
+    .affiliatedWith h2 {
+        font-size: 30px;
+    }
+
+    .affiliatedWith img{
+        margin-bottom: 70px;
+    }
+}
