--- a/css/site/behandelingen.scss
+++ b/css/site/behandelingen.scss
@@ -46,9 +46,10 @@ section{
 	text-align: center;
 	padding-top: 0px !important;
 	padding-bottom: 0px !important;
+	margin-top: -50px;
 	.after-header{
 		background: white;
-		top: -100px;
+		top: -60px;
 		padding: 50px;
 		box-shadow: 0px 1px 30px rgba(0,0,0,0.2);
 		border-bottom: 2px $color solid; 
@@ -138,10 +139,16 @@ section{
 	margin-bottom: 5px;
 	position: relative;
 	margin-bottom: 20px;
+	.behandeling--case--img{
+		height: 250px;
+		background-size: cover; 
+		background-position: center;
+		margin-top: 20px;
+	}
 	a{
 		color: $color !important;
 		font-size: 12px !important;
-		padding-top: 15px !important;
+		position: relative;
 	}
 	hr{
 		width: 50px;
@@ -174,7 +181,7 @@ section{
 		font-size: 130px;
 		position: absolute;
 		opacity: 0.3;
-		top: -70px;
+		top: -60px;
 		color: $color;
 		font-family: 'playfair';
 		font-weight: bold;
