--- a/css/site/home.css
+++ b/css/site/home.css
@@ -162,6 +162,7 @@ body {
   height: auto;
   background: white;
   padding: 20px;
+  position: relative;
 }
 
 .home-tip .inner-tip {
@@ -169,11 +170,33 @@ body {
   padding: 200px 0;
 }
 
+.home .tip {
+  position: relative;
+}
+
+.home-tip .tip:before {
+  content: "Tip";
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  color: #E9F9F1;
+  font-size: 160px;
+  top: -120px;
+  left: 100px;
+  z-index: 0;
+}
+
 .home-tip .inner-tip h4 {
   text-align: center;
+  position: relative;
   max-width: 800px;
   display: block;
   margin: auto;
   font-family: 'Playfair Display', serif;
   font-size: 24px;
+  line-height: 34px;
+}
+
+.home-tip .inner-tip p {
+  text-align: center;
+  margin-top: 30px;
 }
