--- a/css/framework.css
+++ b/css/framework.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background: #f7f8f8 !important;
 }
 
 h1 {
@@ -33,7 +34,7 @@ h4 {
 
 p, a {
     font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
-    color: #9e9e9e;
+    color: #686868;
 }
