--- a/css/site/home.css
+++ b/css/site/home.css
@@ -7,7 +7,6 @@
 
 body {
   font-family: "Josefin Sans", sans-serif;
-   height: 3000px; /* <--scroll testen */
   background: #eee;
 }
 
@@ -21,7 +20,7 @@ body {
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
-  padding: 200px 0;
+  padding: 250px 0;
 }
 
 .home-hero .intro h1 {
@@ -44,6 +43,7 @@ body {
   margin: 40px 0 0 0;
   max-width: 880px;
   color: white;
+  font-size: 18px;
 }
 
 .home-hero button {
@@ -194,6 +194,7 @@ body {
   font-family: 'Playfair Display', serif;
   font-size: 24px;
   line-height: 34px;
+  font-weight: 300;
 }
 
 .home-tip .inner-tip p {
