--- a/css/site/home.css
+++ b/css/site/home.css
@@ -38,6 +38,14 @@ body {
   left: -50px;
 }
 
+@media only screen and (max-width: 992px) {
+
+  .home-hero .intro h1::before {
+      content: "" !important;
+  }
+
+} 
+
 
 .home-hero .intro p {
   margin: 40px 0 0 0;
@@ -141,6 +149,15 @@ body {
   z-index: 0;
 }
 
+
+@media only screen and (max-width: 992px) {
+
+  .home-behandelingen .behandeling-text:before {
+      content: "" !important;
+  }
+
+} 
+
 .home-behandelingen .behandeling-text p {
   margin-top: 30px;
   font-size: 16px;
@@ -184,6 +201,14 @@ body {
   left: 100px;
   z-index: 0;
 }
+
+@media only screen and (max-width: 992px) {
+
+  .home-tip .tip:before  {
+      content: "" !important;
+  }
+
+} 
 
 .home-tip .inner-tip h4 {
   text-align: center;
