--- a/css/site/behandelingen.css
+++ b/css/site/behandelingen.css
@@ -7,7 +7,10 @@ section {
   padding-bottom: 75px !important; }
 
 #behandelingen-hero {
-  background: #9CD1BE;
+  background: url(/images/behandelingen-background.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 200px !important;
   padding-bottom: 200px !important; }
   #behandelingen-hero h1 {
@@ -21,15 +24,15 @@ section {
       left: -20px;
       opacity: 0.2;
       color: white; }
-    @media (max-width: 992px) {
+    /* @media (max-width: 992px) {
       #behandelingen-hero h1 {
-        font-size: 35px !important; } }
+        font-size: 35px !important; } } */
   #behandelingen-hero p {
     padding-top: 20px;
     color: white !important; }
-    @media (max-width: 992px) {
+    /* @media (max-width: 992px) {
       #behandelingen-hero p {
-        font-size: 12px !important; } }
+        font-size: 12px !important; } } */
 
 #section-2 {
   text-align: center;
@@ -42,9 +45,9 @@ section {
     padding: 50px;
     box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.2);
     border-bottom: 2px #9CD1BE solid; }
-  @media (max-width: 992px) {
+  /* @media (max-width: 992px) {
     #section-2 p {
-      font-size: 12px !important; } }
+      font-size: 12px !important; } } */
 
 #behandelingen--section {
   outline: 2px #9CD1BE solid;
@@ -56,13 +59,11 @@ section {
   #behandelingen--section .g-txt {
     position: absolute !important;
     font-size: 100px !important;
-    color: #9CD1BE;
-    opacity: 0.2;
+    color: #E9F9F1;
     top: -30px; }
     @media (max-width: 992px) {
       #behandelingen--section .g-txt {
-        font-size: 40px !important;
-        left: 50px; } }
+        display: none;} }
   #behandelingen--section #behandelingen--items {
     list-style: none;
     padding-left: 0px;
@@ -81,7 +82,7 @@ section {
         position: relative; }
         @media (max-width: 992px) {
           #behandelingen--section #behandelingen--items li a {
-            font-size: 13px !important; } }
+             } }
         #behandelingen--section #behandelingen--items li a:hover {
           opacity: 1 !important; }
           #behandelingen--section #behandelingen--items li a:hover::after {
@@ -104,17 +105,18 @@ section {
   padding-bottom: 100px;
   transition: all 1s ease;
   border-bottom: 2px #9CD1BE solid;
-  margin-bottom: 5px;
   position: relative;
-  margin-bottom: 20px; }
+  margin-bottom: 50px; }
   .behandeling--case .behandeling--case--img {
     height: 250px;
     background-size: cover;
     background-position: center;
-    margin-top: 20px; }
+    margin-top: 50px; }
   .behandeling--case a {
     color: #9CD1BE !important;
-    font-size: 12px !important;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    /* font-size: 12px !important; */
     position: relative; }
   .behandeling--case hr {
     width: 50px;
@@ -124,16 +126,15 @@ section {
     border-style: none;
     margin-left: -20px; }
   .behandeling--case:hover {
-    transform: scale(1.02) !important;
+    transform: scale(1.01) !important;
     transition: all 0.3s ease; }
   .behandeling--case p {
-    color: black !important;
-    font-size: 15px !important;
+    margin-bottom: 10px;
     z-index: 1;
     position: relative; }
-    @media (max-width: 992px) {
+    /* @media (max-width: 992px) {
       .behandeling--case p {
-        font-size: 12px !important; } }
+        font-size: 12px !important; } } */
   .behandeling--case .behandeling--left {
     padding: 0px 50px; }
     @media (max-width: 992px) {
@@ -142,18 +143,18 @@ section {
   .behandeling--case .behandeling--number {
     font-size: 130px;
     position: absolute;
-    opacity: 0.3;
     top: -60px;
-    color: #9CD1BE;
+    color: #E9F9F1;
     font-family: 'playfair';
     font-weight: bold;
     z-index: 0 !important; }
   .behandeling--case h3 {
-    padding-bottom: 10px;
-    color: #9CD1BE;
-    font-weight: lighter;
-    font-size: 20px !important;
-    text-transform: uppercase;
+    padding-bottom: 20px;
+    color: #67ABA4;
+    font-weight: 400;
+    /* font-weight: lighter; */
+    /* font-size: 20px !important; */
+    /* text-transform: uppercase; */
     position: relative;
     z-index: 1 !important; }
   .behandeling--case .image--big {
@@ -171,8 +172,8 @@ section {
   .behandeling--case h4 {
     z-index: 1;
     position: relative;
-    font-size: 15px !important;
-    padding-bottom: 10px;
+    font-size: 22px !important;
+    padding-bottom: 20px;
     color: #9CD1BE;
     padding-top: 50px; }
 
