--- a/css/site/header.css
+++ b/css/site/header.css
@@ -194,13 +194,16 @@
 	visibility: visible !important;
 }
 
+#mobile-menu li {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
 #mobile-menu li a{
 	transition: all 0.5s ease;
 	padding-left: -10px;
 	opacity: 0;
-
 }
-
 
 .mobile-menu-active li:nth-child(1) a{
 	transition-delay: 0.1s !important;
@@ -233,7 +236,7 @@
 
 
 #mobile-menu{
-	padding-top: 150px;
+	padding-top: 200px;
 	padding-left: 0px;
 }
 
