--- a/css/admin/login.css
+++ b/css/admin/login.css
@@ -87,7 +87,10 @@ body{
 	margin-top: 50px;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 660px) {
+	#loginForm, #forgotPasswordForm, #emailSends{
+		width: 100vw;
+	}
 
 }
 
