--- a/css/admin/login.css
+++ b/css/admin/login.css
@@ -51,6 +51,7 @@ body{
 	line-height: 50px;
 	font-size: 20px;	
 	padding-left: 5%;
+	border: 1px solid #eeeeee;
 }
 
 .loginSubmit, #iGotIt, #confirmButton{
