--- a/css/site/behandelingen.scss
+++ b/css/site/behandelingen.scss
@@ -2,7 +2,7 @@
 body{
 	background: #eee;
 }
-$color: #9CD1BE;
+// $color: #9CD1BE;
 
 section{
 	padding-top: 75px !important;
@@ -10,7 +10,7 @@ section{
 }
 
 #behandelingen-hero{
-	background: $color;
+	// background: $color;
 	padding-top: 200px !important;
 	padding-bottom: 200px !important;
 
