--- a/css/site/behandelingen.css
+++ b/css/site/behandelingen.css
@@ -7,7 +7,7 @@ section {
   padding-bottom: 75px !important; }
 
 #behandelingen-hero {
-  background: url(/images/behandelingen-background.jpg);
+  background: url(/images/behandelingen-background.jpg) !important;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
